still looks a bit weird on safari, trying to fix wrapper dvh

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -96,8 +96,8 @@ img {
     margin-top: 5dvh;
     width: 90%;
     max-width: 1500px;
-    // height: 75vh;
     max-height: 90dvh;
+    min-height: 80dvh;
     min-height: -webkit-fill-available;
     border: 3px solid #000;
     position: relative;
