--- a/styles/style.css
+++ b/styles/style.css
@@ -335,6 +335,7 @@ img {
   width: 90%;
   max-width: 1500px;
   max-height: 90dvh;
+  min-height: 80dvh;
   min-height: -webkit-fill-available;
   border: 3px solid #000;
   position: relative;
